@@ -1,3 +1,8 @@
+2014-09-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/63248
+	* testsuite/libgomp.c++/pr63248.C: New test.
+
 2014-08-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* task.c (GOMP_taskgroup_end): If taskgroup->num_children
